--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                             <img src="assets/images/cramlab-1-128x128.png" alt="Mobirise" style="height: 4rem;">
                         </a>
                     </span>
-                    <span class="navbar-caption-wrap"><a href="https://mobiri.se" class="brand-name mbr-black mbr-bold text-secondary display-5">CRAMLAB</a></span>
+                    <span class="navbar-caption-wrap"><a href="https://www.kaipalab.com" class="brand-name mbr-black mbr-bold text-secondary text-primary display-5">CRAMLAB</a></span>
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-verified="kkaipa@odu.edu" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="txYA+pA9yzqxCUTnqJnCOCfBdvHUyjH5pqLNuAw5+5g+GA0PbWN4+cBqItxyxw5NTXYgDgGXVpstx2RPwCEyUNSkNwSSBydnyzEdn/29Yh10/mEl/k9123WkVG4ySbvl">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-verified="kkaipa@odu.edu" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7qFeoQfw54gAgw7jSSXeUhODeP+5tSFl7fTqBlTq4Pdv8iSrP+T2EF+Pc2JsbZj9m8fad3/eS/mL0pTRXjqQ/Q31tc5SfIJQJNmvRaf8UXdieGSS1HPr/X0gO9SwqJLZ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for contacting us!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
