--- a/youtube_channel.html
+++ b/youtube_channel.html
@@ -44,7 +44,7 @@
                             <img src="assets/images/cramlab-1-128x128.png" alt="Mobirise" style="height: 4rem;">
                         </a>
                     </span>
-                    <span class="navbar-caption-wrap"><a href="https://mobiri.se" class="brand-name mbr-black mbr-bold text-secondary display-5">CRAMLAB</a></span>
+                    <span class="navbar-caption-wrap"><a href="https://www.kaipalab.com" class="brand-name mbr-black mbr-bold text-secondary text-primary display-5">CRAMLAB</a></span>
                 </div>
             </div>
 
