create github pages

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                             <img src="assets/images/cramlab-1-128x128.png" alt="Mobirise" style="height: 4rem;">
                         </a>
                     </span>
-                    <span class="navbar-caption-wrap"><a href="https://www.kaipalab.com" class="brand-name mbr-black mbr-bold text-secondary text-primary display-5">CRAMLAB</a></span>
+                    <span class="navbar-caption-wrap"><a href="index.html#top" class="brand-name mbr-black mbr-bold text-secondary text-primary display-5">CRAMLAB</a></span>
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-verified="kkaipa@odu.edu" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7qFeoQfw54gAgw7jSSXeUhODeP+5tSFl7fTqBlTq4Pdv8iSrP+T2EF+Pc2JsbZj9m8fad3/eS/mL0pTRXjqQ/Q31tc5SfIJQJNmvRaf8UXdieGSS1HPr/X0gO9SwqJLZ">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-verified="kkaipa@odu.edu" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RffzfmBPUQvvJWADXROw1bz2+LQ8ppVMX0eF2ca5MzjYUw8cGKY5YoOuJLF+kxgPrDnkbyW0cPM538NzqOJd8KYxVglGkbsx3k41oS76knFo8i+tWVjUlujJW1jOMkRz">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for contacting us!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
